se ocultaron las ventas realizadas

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,15 @@
     <ul id="listaVentas"></ul>
   </section>
 
+  <input type="date" id="fechaVentas">
+<button id="btnBuscarVentas">Buscar ventas</button>
+
+<ul id="listaVentas"></ul>
+
+<button id="btnVerMas">Ver más</button>
+
+
+
   <script src="app.js"></script>
 </body>
 </html>
